# ginga

./: .Makefile.swp  .autotools  .clang-format  .cproject  .gitignore  .travis.yml  AUTHORS  CMakeLists.defs.txt  CMakeLists.txt  ChangeLog  Composition_8h_source.html  Context_8h_source.html  Dockerfile  Document_8h_source.html  Event_8h_source.html  Formatter_8cpp.html  Formatter_8cpp.js  Formatter_8cpp__incl.map  Formatter_8cpp__incl.md5  Formatter_8h_source.html  Ginga_8cpp.html  Ginga_8cpp__incl.map  Ginga_8cpp__incl.md5  LICENSING  Makefile.am  MediaSettings_8h_source.html  Media_8h_source.html  NEWS  Object_8h_source.html  ParserLua_8h_source.html  Parser_8h_source.html  PlayerAnimator_8h_source.html  PlayerHTML_8cpp.html  PlayerHTML_8cpp__incl.map  PlayerHTML_8cpp__incl.md5  PlayerHTML_8h.html  PlayerHTML_8h__dep__incl.map  PlayerHTML_8h__dep__incl.md5  PlayerHTML_8h__incl.map  PlayerHTML_8h__incl.md5  (+349 more)
build-cmake/: CMakeLists.txt  config.h.in  runview.cmake
build-cmake/CMakeModules/: FindATK.cmake  FindFFmpeg.cmake  FindGStreamer-1.0.cmake  FindGStreamer.cmake  FindLibSoup.cmake  FindLinuxDVB.cmake  FindPango.cmake  cef_macros.cmake  cef_variables.cmake
data/: Makefile.am
data/contextmanager/: contexts.ini
data/formatter/: mimedefs.ini
data/mb/: input.cfg
data/tuner/: isdbt.ini
dataprocessing/: DataProcessor.h  IEPGProcessor.h  Makefile.am
dataprocessing/dsmcc/: Binding.cpp  Biop.cpp  Crc.cpp  DSMCCSectionPayload.cpp  DSMCCSectionPayload.h  DownloadDataBlock.cpp  DownloadInfoIndication.cpp  DownloadServerInitiate.cpp  DsmccMessageHeader.cpp  Ior.cpp  Ior.h  MessageProcessor.cpp  Module.cpp  MpegDescriptor.cpp  NPTEndpoint.cpp  NPTEndpoint.h  NPTProcessor.cpp  NPTReference.cpp  Object.cpp  ObjectProcessor.cpp  ServiceDomain.cpp  ServiceDomain.h  StreamMode.cpp  StreamMode.h  TimeBaseClock.cpp
dataprocessing/ncl/: DataFile.cpp  EventDescriptor.cpp  EventDescriptor.h  INCLSectionProcessor.h  INCLStructure.h  NCLMetadataParser.cpp  NCLMetadataParser.h  NCLSectionProcessor.cpp  NCLSectionProcessor.h
doc/: CMakeLists.txt  Doxyfile.in  arch.tex  diagrams.tex  doc.mk  index.doxygen
ginga/: ChangeLog  Makefile.am  TODO  main.cpp
ginga/src/: main.cpp
gingacc-cm/: ChangeLog  INSTALL  Makefile.am  README  README.windows  TODO  autogen.sh  configure.ac  configure.in
gingacc-cm/files/: Makefile.am  componentDescription.xml  componentDescription.xml.in
gingacc-cm/src/: ComponentManager.cpp  Makefile.am
gingacc-cm/test/: Makefile.am  test.cpp
gingacc-cm/tests/: Makefile.am  test.cpp  testProfiler.cpp
gingacc-contextmanager/: ChangeLog  INSTALL  Makefile.am  README  README.windows  TODO  autogen.sh  configure.ac  configure.in
gingacc-contextmanager/files/: Makefile.am
gingacc-contextmanager/include/: ContextManager.h  IContextManager.h  Makefile.am
gingacc-contextmanager/src/: ContextManager.cpp  Makefile.am
gingacc-contextmanager/test/: Makefile.am  test.cpp
gingacc-contextmanager/tests/: Makefile.am  test.cpp
gingacc-dataprocessing/: ChangeLog  Doxyfile  INSTALL  Makefile.am  README  README.windows  TODO  autogen.sh  configure.ac  configure.in
gingacc-dataprocessing/include/: DataProcessor.h  EPGProcessor.h  FilterManager.h  IDataProcessor.h  IEPGListener.h  IEPGProcessor.h  IFilterListener.h  ITransportSection.h  Makefile.am  SectionFilter.h  TransportSection.h
gingacc-dataprocessing/src/: DataProcessor.cpp  EPGProcessor.cpp  FilterManager.cpp  Makefile.am  SectionFilter.cpp  TransportSection.cpp
gingacc-dataprocessing/test/: Makefile.am  dsmccExtract.cpp  test.cpp
gingacc-dataprocessing/tests/: Makefile.am  test.cpp
gingacc-ic/: ChangeLog  INSTALL  Makefile.am  README  README.windows  TODO  autogen.sh  configure.ac  configure.in
gingacc-ic/include/: IInteractiveChannel.h  IInteractiveChannelListener.h  InteractiveChannelManager.h
gingacc-ic/src/: InteractiveChannelManager.cpp  Makefile.am
gingacc-ic/test/: Makefile.am  test.cpp
gingacc-ic/tests/: Makefile.am  test.cpp
gingacc-io/: ChangeLog  Doxyfile  INSTALL  Makefile.am  README  autogen.sh  configure.in
gingacc-io/include/: AudioProvider.h  CodeMap.h  Contents.h  ContinuousMediaProvider.h  DeviceAudio.h  DeviceCommunication.h  DeviceScreen.h  FontProvider.h  GingaLocatorFactory.h  Graphics.h  IOContainer.h  IOHandler.h  ImageProvider.h  InputEvent.h  InputEventBuffer.h  InputEventListener.h  InputManager.h  Inputs.h  Makefile.am  OutputDevice.h  OutputManager.h  Surface.h  VideoProvider.h  Window.h
gingacc-io/src/: GingaLocatorFactory.cpp  IOHandler.cpp  InputManager.cpp  Makefile.am  OutputManager.cpp
gingacc-mb/: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
gingacc-mb/files/: Makefile.am
gingacc-mb/src/: DistributedInputManagerListener.cpp  DistributedInputManagerMB.cpp  DistributedScreenManager.cpp  InputManager.cpp  LocalDeviceManager.cpp  LocalScreenManager.cpp  Makefile.am  ScreenManagerFactory.cpp  main.cpp
gingacc-mb/test/: Makefile.am  testAudio.cpp  testFont.cpp  testInput.cpp  testSVideo  testScreen.cpp  testSingleVideo.cpp  testVideo.cpp
gingacc-mb/tests/: Makefile.am  rawSDL2ffmpeg.cpp  simpleTestImage.cpp  simpleTestInput.cpp  simpleTestText.cpp  simpleTestVideo.cpp  testAudio.cpp  testFont.cpp  testInput.cpp  testScreen.cpp  testSingleVideo.cpp  testVideo.cpp
gingacc-multidevice/: ChangeLog  INSTALL  Makefile.am  README  README.windows  TODO  autogen.sh  configure.ac  configure.in
gingacc-multidevice/include/: IRemoteDeviceListener.h  IRemoteDeviceManager.h  Makefile.am  RemoteDeviceManager.h
gingacc-multidevice/src/: Makefile.am  RemoteDevice.cpp  RemoteDeviceManager.cpp
gingacc-multidevice/test/: Makefile.am  test.cpp  test_active.cpp
gingacc-multidevice/tests/: Makefile.am  test.cpp
gingacc-player/: .gitignore  AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile.am  README  README.windows  TODO  autogen.sh  configure.ac  configure.in
gingacc-player/files/: Makefile.am
gingacc-system/: ChangeLog  Doxyfile  INSTALL  Makefile.am  README  README.windows  TODO  autogen.sh  configure.ac  configure.in
(+5156 files in other folders)
